<resources>
    <string name="app_name">钱脉</string>
    <string name="minuteago">分钟前</string>
    <string name="hourago">小时前</string>
    <string name="dayago">天前</string>
    <string name="at_now">刚刚</string>
    <string name="common_choice">选择</string>
    <string name="common_comment">回复</string>
    <string name="common_discard">丢弃</string>
    <string name="common_send">发送</string>
    <string name="common_cancel">取消</string>
    <string name="common_upgrade">升级</string>
    <string name="common_name">名称</string>
    <string name="common_account">帐号</string>
    <string name="common_confirm">确定</string>
    <string name="common_query">查询</string>
    <string name="common_operation">操作</string>
    <string name="common_gender">性别</string>
    <string name="common_handle">处理</string>
    <string name="common_load">加载</string>
    <string name="common_sysmessage">系统消息</string>
    <string name="common_system">系统</string>
    <string name="common_message">客户管理</string>
    <string name="common_home_page">业绩报告</string>
    <string name="common_dashboard">业绩报告</string>
    <string name="common_agree">同意</string>
    <string name="common_refuse">拒绝</string>
    <string name="common_ignore">忽略</string>
    <string name="common_back">返回</string>
    <string name="common_mygroups">我的群组</string>
    <string name="common_has_agree">已同意</string>
    <string name="common_has_refuse">已拒绝</string>
    <string name="common_has_ignore">已忽略</string>
    <string name="common_add">添加</string>
    <string name="common_addfriend">添加好友</string>
    <string name="common_add_product_respository">添加入库单</string>
    <string name="common_contacts">库存</string>
    <string name="common_copy">复制</string>
    <string name="common_man">男</string>
    <string name="common_female">女</string>
    <string name="common_feedback">建议反馈</string>
    <string name="common_delete">删除</string>
    <string name="common_group">群组</string>
    <string name="common_open">打开</string>
    <string name="common_location">位置</string>
    <string name="common_map">地图</string>
    <string name="common_about">关于</string>
    <string name="common_hint">提示</string>
    <string name="common_save">保存</string>
    <string name="common_setting">设置</string>
    <string name="common_detail">详情</string>
    <string name="common_trend">发现</string>
    <string name="common_earn">赚</string>
    <string name="common_my">我</string>
    <string name="common_dissolve">解散</string>
    <string name="common_quit">退出</string>
    <string name="common_logout">退出登录</string>
    <string name="common_create">创建</string>
    <string name="common_detection">检测</string>
    <string name="common_picture">图片</string>
    <string name="common_camera">拍照</string>
    <string name="common_album">相册</string>
    <string name="common_download">下载</string>
    <string name="common_current_location">当前位置：%1$s</string>
    <string name="common_detailed">详细资料</string>
    <string name="label_file_stopdownload">停止下载</string>
    <string name="label_file_download">已下载%1$s</string>
    <string name="label_file_size">文件大小%1$s</string>
    <string name="label_file_choice">选择文件</string>
    <string name="label_file_info">查看文件</string>
    <string name="label_search_user">搜索用户:%1$s</string>
    <string name="label_search_group">搜索群组:%1$s</string>
    <string name="label_search_pubaccount">搜公众号:%1$s</string>
    <string name="label_enter_pubaccount">进入公众号</string>
    <string name="label_subscribe">关注</string>
    <string name="label_unsubscribe">不再关注</string>
    <string name="label_function_summary">功能介绍</string>
    <string name="label_homepage">主页</string>
    <string name="label_pubaccount">公众号:%1$s</string>
    <string name="label_copy_url">复制链接</string>
    <string name="label_share_moment">分享到动态</string>
    <string name="label_open_browser">浏览器中打开</string>
    <string name="label_changetext_size">调整字体</string>
    <string name="label_geting">获取中…</string>
    <string name="label_read_all_text">查看全文</string>
    <string name="label_login_password">密码</string>
    <string name="label_login">登录</string>
    <string name="label_rab">我也要抢</string>
    <string name="label_login_change_account">切换账号</string>
    <string name="label_logout_notify">下线通知</string>
    <string name="label_logout_detail">可能您的帐号刚刚在另一台设备登录，或者你已经被系统强制下线。</string>
    <string name="label_register_account">注册帐号</string>
    <string name="label_register">注册</string>
    <string name="label_user_oldpassword">旧密码：</string>
    <string name="label_user_newpassword">新密码：</string>
    <string name="label_user_account">帐号：</string>
    <string name="label_user_icon">头像：</string>
    <string name="label_meitu">美图美妆</string>
    <string name="label_tmall">天猫旗舰</string>
    <string name="label_user_password">密码：</string>
    <string name="label_user_name">名称：</string>
    <string name="label_user_gender">性别：</string>
    <string name="label_user_motto">签名：</string>
    <string name="label_user_detail">个人资料</string>
    <string name="label_user_ablbum">我的相册</string>
    <string name="label_detail">详细资料</string>
    <string name="label_product_icon">商品：</string>
    <string name="label_product_num">进货数量：</string>
    <string name="label_product_price">进货价格：</string>
    <string name="label_product_supplier">进货渠道：</string>
    <string name="label_ablbum_count">%1$s张</string>
    <string name="label_ablbum_all">所有图片</string>
    <string name="label_contacts_new_friend">新的朋友</string>
    <string name="label_icons_task">待办</string>
    <string name="label_icons_calendar">日程</string>
    <string name="label_contacts_group_chat">群组</string>
    <string name="label_contacts_public">公众号</string>
    <string name="label_knowlege">知识库</string>
    <string name="label_meeting">会议</string>
    <string name="label_report">报表</string>
    <string name="label_email">邮件</string>
    <string name="label_kq">考勤</string>
    <string name="label_cloud">云盘</string>
    <string name="label_contacts_frend_count">一共%1$s位联系人</string>
    <string name="label_my_created">我创建的</string>
    <string name="label_my_join">我加入的</string>
    <string name="label_group_icon">群徽：</string>
    <string name="label_group_id">群ID：</string>
    <string name="label_group_name">名称：</string>
    <string name="label_group_summary">简介：</string>
    <string name="label_group_founder">创建者：</string>
    <string name="label_group_host">群主</string>
    <string name="label_group_member">群成员：</string>
    <string name="label_group_invite">邀请加入</string>
    <string name="label_group_ignore">屏蔽群消息</string>
    <string name="label_group_apply">申请加入</string>
    <string name="label_group_create">创建群组</string>
    <string name="label_group_detail">群资料</string>
    <string name="label_group_members">群成员列表</string>
    <string name="label_group_create_succesed">创建成功</string>
    <string name="label_group_invite_count">邀请(%1$s)</string>
    <string name="label_album_selected_count">确定(%1$s)</string>
    <string name="label_setting_modify_password">修改密码</string>
    <string name="label_setting_modify_motto">修改签名</string>
    <string name="label_setting_modify_name">修改名称</string>
    <string name="label_setting_profile">个人信息</string>
    <string name="label_setting_notify">消息设置</string>
    <string name="label_setting_update">检查更新</string>
    <string name="label_setting_about">关于钱脉</string>
    <string name="label_setting_cache">清除缓存</string>
    <string name="label_setting_exit">退出程序</string>
    <string name="label_setting_chanage">切换账号</string>
    <string name="label_setting_newversion">新版本:%1$s</string>
    <string name="label_notify_disturb">免打扰</string>
    <string name="label_notification_bar_switch">通知栏消息</string>
    <string name="label_notify_tip">开启后在深夜23:00到8:00时段不会发出提示音</string>
    <string name="label_shake_record">摇一摇记录</string>
    <string name="label_sound_switch">声音开关</string>
    <string name="label_sound_type">提示音类型</string>
    <string name="label_sound_system">系统</string>
    <string name="label_sound_classic">经典</string>
    <string name="label_sound_dingdong">叮咚</string>
    <string name="label_publish">发布</string>
    <string name="label_circle_publish">分享时光</string>
    <string name="label_circle">圈子</string>
    <string name="label_circle_message">圈子消息</string>
    <string name="label_circle_my">我的圈子</string>
    <string name="label_bottle_list">我的瓶子</string>
    <string name="label_respository_product_manager">库存商品管理</string>
    <string name="label_bottle_throw">扔一个</string>
    <string name="label_bottle_get">捡一个</string>
    <string name="label_bottle_record">我的瓶子</string>
    <string name="text_bottle_throw">扔出去</string>
    <string name="text_bottle_press_record">按住说话</string>
    <string name="text_bottle_pelease_throw">松开扔出去</string>
    <string name="label_contacts_add_friend">加为好友</string>
    <string name="label_shake_loading">稍等片刻，好运马上就到。</string>
    <string name="label_function_circle">好友动态</string>
    <string name="label_function_nearby">附近的人</string>
    <string name="label_function_bottle">漂流瓶</string>
    <string name="label_function_shake">摇一摇</string>
    <string name="label_chat_soundrecord_normal">按住,录音</string>
    <string name="label_chat_soundrecord_pressed">松开,结束</string>
    <string name="label_chat_soundcancle">手指上滑,取消发送</string>
    <string name="label_chat_unlashcancle">松开手指,取消发送</string>
    <string name="label_chat_send_message">发送消息</string>
    <string name="title_contacts_verify_message">验证消息</string>
    <string name="title_contacts_verify">请求验证</string>
    <string name="title_delete_message">删除消息</string>
    <string name="title_remove_friend">删除好友</string>
    <string name="title_choice_picture">选择图片方式</string>
    <string name="title_corp_image">裁剪图片</string>
    <string name="tip_has_sent">已发送</string>
    <string name="tip_has_read">已阅读</string>
    <string name="tip_loading_text">正在加载,请稍候…</string>
    <string name="tip_save_loading">正在保存,请稍候…</string>
    <string name="tip_conn_server_failed">连接服务器失败</string>
    <string name="tip_network_disable">网络连接不可用</string>
    <string name="tip_data_beall">已经显示完所有数据</string>
    <string name="tip_location">正在定位…</string>
    <string name="tip_loading">正在%1$s,请稍候…</string>
    <string name="tip_unknow_distance">未知距离</string>
    <string name="tip_unknow_location">未知地址</string>
    <string name="tip_handle_succeed">处理成功</string>
    <string name="tip_no_new_version">当前已经是最新版本啦!</string>
    <string name="tip_file_download_complete">下载完成，保存在：%1$s</string>
    <string name="tip_file_download_failed">下载失败，请稍候再试</string>
    <string name="tip_send_request_complete">发送请求成功，等待对方验证!</string>
    <string name="tip_article_deleted">这条内容已经被删除了!</string>
    <string name="tip_required_gender">请选择性别</string>
    <string name="tip_required_name">请填写名称</string>
    <string name="tip_required_account">请填写帐号</string>
    <string name="tip_required_groupid">请填写群ID</string>
    <string name="tip_search_noresult">没有查询到相关结果</string>
    <string name="tip_required_password">请填写密码</string>
    <string name="tip_required_icon">请选择一个头像吧</string>
    <string name="tip_account_not_unique">帐号%1$s已经被注册了!</string>
    <string name="tip_required_article">不能发表空内容哟!</string>
    <string name="tip_create_complete">创建成功</string>
    <string name="tip_register_complete">注册成功</string>
    <string name="tip_publish_complete">发布成功</string>
    <string name="tip_group_dissolve_complete">已经成功解散该群</string>
    <string name="tip_group_quit_complete">已经成功退出该群</string>
    <string name="tip_group_kickout_complete">已经成功踢出该成员</string>
    <string name="tip_group_invite_complete">发送邀请成功，等待对方确认!</string>
    <string name="tip_friend_remove_complete">已经成功删除该好友</string>
    <string name="tip_save_complete">保存成功</string>
    <string name="tip_oldpassword_error">旧密码错误</string>
    <string name="tip_account_or_password_error">帐号或者密码错误</string>
    <string name="tip_delete_comment">确定删除这条评论吗?</string>
    <string name="tip_find_newversion">发现新版本</string>
</resources>