<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/sound_config_item" android:background="@drawable/item_background_top" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="15.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_setting_notify" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/table_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/cache_item" android:background="@drawable/item_background_middle" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_setting_cache" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/table_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/update_item" android:background="@drawable/item_background_middle" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_setting_update" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/table_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/feedback_item" android:background="@drawable/item_background_middle" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_feedback" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/table_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/about_item" android:background="@drawable/item_background_bottom" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_setting_about" android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/table_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <Button android:textColor="@color/white" android:gravity="center" android:id="@id/logoutButton" android:background="@drawable/common_button_red" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/common_logout" />
</LinearLayout>