<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:background="@drawable/item_background_single" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_sound_switch" android:layout_centerVertical="true" />
        <CheckBox android:id="@id/soundSwitch" android:background="@drawable/switch_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/soundSwitchPanel" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/night_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/label_sound_type" />
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/classicSoundSwitch" android:background="@drawable/item_background_top" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_sound_classic" />
            <ImageView android:id="@id/classicSoundMark" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/icon_selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/dingdongSoundSwitch" android:background="@drawable/item_background_middle" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_sound_dingdong" />
            <ImageView android:id="@id/dingdongSoundMark" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/icon_selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/systemSoundSwitch" android:background="@drawable/item_background_bottom" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_sound_system" />
            <ImageView android:id="@id/systemSoundMark" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/icon_selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/item_background_top" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_notify_disturb" android:layout_centerVertical="true" />
            <CheckBox android:id="@id/disturbSwitch" android:background="@drawable/switch_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/item_background_bottom" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="13.0sp" android:textColor="@color/theme_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_notify_tip" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:background="@drawable/item_background_single" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_notification_bar_switch" android:layout_centerVertical="true" />
        <CheckBox android:id="@id/notifySwitch" android:background="@drawable/switch_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>