<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/dialog_background" android:paddingBottom="5.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/theme_green" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/common_gender" />
    <RelativeLayout android:id="@id/man" android:background="@drawable/item_background_top" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <ImageView android:id="@id/man_mark" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/icon_checked" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/common_man" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/female" android:background="@drawable/item_background_bottom" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <ImageView android:id="@id/female_mark" android:visibility="gone" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/icon_checked" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/common_female" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>