<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <cn.cloudartisan.crius.component.BannerImageView
                    android:tag="@drawable/login_banner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            <cn.cloudartisan.crius.component.WebImageView
                    android:id="@id/icon"
                    android:background="@drawable/circle_box_bg"
                    android:padding="2.0dip"
                    android:layout_width="100.0dip"
                    android:layout_height="100.0dip"
                    android:scaleType="centerCrop"
                    android:layout_centerInParent="true" />
        </RelativeLayout>
        <View android:background="@drawable/background_bottom_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:id="@id/accountInputView" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <EditText android:id="@id/account"
                      android:text="18701835875" android:paddingLeft="60.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:digits="._@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" />
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/label_user_account" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <EditText android:id="@id/password" android:text="111qqq!" android:paddingLeft="60.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:inputType="textPassword" />
            <TextView android:textColor="@color/theme_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/label_user_password" android:layout_centerVertical="true" />
        </RelativeLayout>
        <Button android:enabled="false" android:id="@id/login_button" android:layout_width="fill_parent" android:layout_margin="10.0dip" android:text="@string/label_login" style="@style/MMBigGreenButton" />
        <TextView android:textColor="@color/text_selector" android:gravity="center" android:id="@id/label_register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/label_register" />
    </LinearLayout>
</ScrollView>