<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/iconSwicth"
        android:background="@drawable/item_background_top" android:padding="10.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/label_product_icon"
            android:layout_centerVertical="true" />
        <ImageView android:id="@id/icon" android:layout_width="50.0dip"
            android:layout_height="50.0dip" android:layout_marginRight="20.0dip"
            android:src="@drawable/icon_head_default" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/table_arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal"
        android:background="@drawable/item_background_middle" android:padding="10.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/label_user_name" />
        <EditText android:textStyle="bold" android:textColor="@color/black"
            android:id="@id/name" android:padding="5.0dip"
            android:layout_width="fill_parent" android:layout_height="40.0dip"
            android:layout_marginLeft="10.0dip" android:maxLength="10"
            android:inputType="text" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical"
        android:orientation="horizontal" android:id="@id/gender_item"
        android:background="@drawable/item_background_middle" android:padding="10.0dip"
        android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/label_product_num" />
        <EditText android:textColor="@color/black" android:id="@+id/p_num_eidtor"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginRight="20.0dip" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" android:inputType="number"  />

    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/item_background_middle"
        android:padding="10.0dip" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:textColor="@color/black" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/label_product_price" />
        <EditText android:textStyle="bold" android:textColor="@color/black"
            android:id="@+id/p_price_eidtor" android:padding="5.0dip" android:layout_width="fill_parent"
            android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:maxLength="20"

            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/item_background_bottom"
        android:padding="10.0dip" android:id="@+id/supplier_choose"  android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_product_supplier" />
        <TextView  android:textColor="@color/black" android:id="@+id/p_supplier" android:padding="5.0dip" android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="10.0dip"
            />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/table_arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </LinearLayout>
</LinearLayout>